@@ -5,7 +5,7 @@
 #---------------------------------------------------------------------------
 DOXYFILE_ENCODING      = UTF-8
 PROJECT_NAME           = "TAT"
-PROJECT_NUMBER         = "0.2.18"
+PROJECT_NUMBER         = "0.2.19"
 PROJECT_BRIEF          = "TAT is A Tensor library"
 PROJECT_LOGO           =
 OUTPUT_DIRECTORY       =
