@@ -1,6 +1,14 @@
 * Changelog
 
-** [[https://github.com/hzhangxyz/TAT/compare/v0.2.18...dev][Unreleased]]
+** [[https://github.com/hzhangxyz/TAT/compare/v0.2.19...dev][Unreleased]]
+
+*** Added
+*** Changed
+*** Deprecated
+*** Removed
+*** Fixed
+
+** [[https://github.com/hzhangxyz/TAT/compare/v0.2.18...v0.2.19][v0.2.19]] - 2022-07-13
 
 *** Added
 + *tetragono*: Add a new command =gm_hamiltonian= to replace the Hamiltonian of the existent sampling lattice.
@@ -10,8 +18,6 @@
   skip step checking.
 *** Changed
 + *lazy*: Using a manual stack to run the recursion now, to avoid the recursion depth limit.
-*** Deprecated
-*** Removed
 *** Fixed
 + *tetragono*: Fix a problem when calling =gm_data_load= in tetragono shell.
 + *tetragono*: Fix a bug in calculating the natural gradient of a complex tensor network state.
